# Tetris-Q-Learning-in-Cpp

./: BestActionAndUtility.cpp  BestActionAndUtility.h  CMakeLists.txt  Field.cpp  Field.h  Field_old.cpp  Field_old.h  Game.cpp  Game.h  Game.html  LICENSE.txt  Neural.cpp  Neural.h  NeuralNet.cpp  NeuralNet.h  Neural_Network.cpp  Neural_Network.h  Neuron.cpp  Neuron.h  Piece.cpp  Piece.h  Piece_old.cpp  QBrain.cpp  QBrain.h  README.md  example.txt  game.js  idées des pb  index.html  main.cgi  main.cpp  main2.cpp  main3.cpp  main_cgi.cpp  notes pour le rapport  test.cpp
Old_code/: Piece_old.h  main_old.cpp
Website/: game.css  game.js  index.html
